MB-14388: Update snapshot range when vbucket changes to active

Update the snapshot range when a vbucket becomes active, from
being a replica, in a failover scenario, as there is a small
window when the snapshot_start_seqno can become greater than
the vbucket_high_seqno.

Change-Id: I7299fb9a70e0f33f152d58fd1dcda33256428c9f
Reviewed-on: http://review.couchbase.org/49612
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>